--- a/app/assets/stylesheets/1st_load_framework.css.scss
+++ b/app/assets/stylesheets/1st_load_framework.css.scss
@@ -7,24 +7,20 @@ img {
   @extend .img-fluid;
   margin: 0 auto;
 }
-// override for the 'Home' navigation link
-.navbar-brand {
-  font-size: inherit;
-  }
 
 // THESE ARE EXAMPLES YOU CAN MODIFY
 // create your own classes
 // to make views framework-neutral
 .column {
   @extend .col-md-6;
-  @extend .text-xs-center;
+  @extend .text-center;
 }
 .form {
   @extend .col-md-6;
 }
 .form-centered {
   @extend .col-md-6;
-  @extend .text-xs-center;
+  @extend .text-center;
 }
 .submit {
   @extend .btn;
